--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "angular-aria": "^1.5.8",
     "angular-meteor": "^1.3.11",
     "angular-ui-router": "^0.3.1",
+    "chart.js": "^2.4.0",
     "meteor-node-stubs": "~0.2.0",
     "nouislider": "^9.0.0"
   }
