--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-runtime": "^6.23.0",
     "bcrypt": "^1.0.2",
     "chart.js": "^2.4.0",
+    "highcharts": "^5.0.10",
     "meteor-node-stubs": "~0.2.0",
     "nouislider": "^9.0.0"
   }
