--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
+    "angular-chart.js": "^1.1.1",
     "angular-meteor": "^1.3.11",
     "angular-ui-router": "^0.3.1",
     "babel-runtime": "^6.23.0",
     "bcrypt": "^1.0.2",
     "chart.js": "^2.4.0",
-    "highcharts": "^5.0.10",
     "meteor-node-stubs": "~0.2.0",
     "nouislider": "^9.0.0"
   }
